// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Atoms/Alerts/Error Alert Multi Line 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-145dpyk-MuiPaper-root-MuiAlert-root"
  role="alert"
>
  <div
    className="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
      data-testid="ErrorOutlineIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="MuiAlert-message css-acap47-MuiAlert-message"
  >
    <div>
      Error Message.
    </div>
    <div>
      Error Message.
    </div>
    <div>
      Error Message.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Atoms/Alerts/Error Alert Single Line 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-145dpyk-MuiPaper-root-MuiAlert-root"
  role="alert"
>
  <div
    className="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
      data-testid="ErrorOutlineIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="MuiAlert-message css-acap47-MuiAlert-message"
  >
    <div>
      Error Message.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Organisms/Staffs/Staff List/Staff List Default 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-11xur9t-MuiPaper-root-MuiTableContainer-root"
>
  <table
    aria-label="staffs table"
    className="MuiTable-root css-rqglhn-MuiTable-root"
    role={null}
  >
    <thead
      className="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-oromn6-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            担当者名
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-oromn6-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            更新日時
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1y098np-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            編集
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1y098np-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            プルダウン表示
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1y098np-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            プルダウン表示順
          </p>
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root staffs css-apqrd9-MuiTableBody-root"
      data-rbd-droppable-context-id="0"
      data-rbd-droppable-id="staffs"
      role={null}
    >
      <tr
        className="MuiTableRow-root css-ddz5tx-MuiTableRow-root"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="dummyId-1"
        onTransitionEnd={null}
        role={null}
        style={
          Object {
            "transform": null,
            "transition": null,
          }
        }
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qe9bny-MuiTableCell-root"
        >
          担当者1
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qe9bny-MuiTableCell-root"
        >
          2021/02/02 12:30
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
        >
          <button
            className="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="EditIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
            </span>
            担当者を編集する
          </button>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
        >
          <span
            className="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
          >
            <span
              className="MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root Mui-checked css-5ryogn-MuiButtonBase-root-MuiSwitch-switchBase"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <input
                aria-label="activate-switch"
                checked={true}
                className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
                onChange={[Function]}
                type="checkbox"
              />
              <span
                className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
              />
            </span>
            <span
              className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
            />
          </span>
        </td>
        <td
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="dummyId-1"
          draggable={false}
          onDragStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FormatLineSpacingIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 7h2.5L5 3.5 1.5 7H4v10H1.5L5 20.5 8.5 17H6V7zm4-2v2h12V5H10zm0 14h12v-2H10v2zm0-6h12v-2H10v2z"
            />
          </svg>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root css-ddz5tx-MuiTableRow-root"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="dummyId-2"
        onTransitionEnd={null}
        role={null}
        style={
          Object {
            "transform": null,
            "transition": null,
          }
        }
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qe9bny-MuiTableCell-root"
        >
          担当者2
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qe9bny-MuiTableCell-root"
        >
          2021/03/03 13:31
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
        >
          <button
            className="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="EditIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
            </span>
            担当者を編集する
          </button>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
        >
          <span
            className="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
          >
            <span
              className="MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root Mui-checked css-5ryogn-MuiButtonBase-root-MuiSwitch-switchBase"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <input
                aria-label="activate-switch"
                checked={true}
                className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
                onChange={[Function]}
                type="checkbox"
              />
              <span
                className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
              />
            </span>
            <span
              className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
            />
          </span>
        </td>
        <td
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="dummyId-2"
          draggable={false}
          onDragStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FormatLineSpacingIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 7h2.5L5 3.5 1.5 7H4v10H1.5L5 20.5 8.5 17H6V7zm4-2v2h12V5H10zm0 14h12v-2H10v2zm0-6h12v-2H10v2z"
            />
          </svg>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root css-ddz5tx-MuiTableRow-root"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="dummyId-3"
        onTransitionEnd={null}
        role={null}
        style={
          Object {
            "transform": null,
            "transition": null,
          }
        }
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qe9bny-MuiTableCell-root"
        >
          担当者3
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qe9bny-MuiTableCell-root"
        >
          2021/04/04 14:32
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
        >
          <button
            className="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="EditIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
            </span>
            担当者を編集する
          </button>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
        >
          <span
            className="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
          >
            <span
              className="MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root Mui-checked css-5ryogn-MuiButtonBase-root-MuiSwitch-switchBase"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <input
                aria-label="activate-switch"
                checked={true}
                className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
                onChange={[Function]}
                type="checkbox"
              />
              <span
                className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
              />
            </span>
            <span
              className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
            />
          </span>
        </td>
        <td
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="dummyId-3"
          draggable={false}
          onDragStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FormatLineSpacingIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 7h2.5L5 3.5 1.5 7H4v10H1.5L5 20.5 8.5 17H6V7zm4-2v2h12V5H10zm0 14h12v-2H10v2zm0-6h12v-2H10v2z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Organisms/Staffs/Staff List/Staff List Empty 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-11xur9t-MuiPaper-root-MuiTableContainer-root"
>
  <table
    aria-label="staffs table"
    className="MuiTable-root css-rqglhn-MuiTable-root"
    role={null}
  >
    <thead
      className="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-oromn6-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            担当者名
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-oromn6-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            更新日時
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1y098np-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            編集
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1y098np-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            プルダウン表示
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1y098np-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            プルダウン表示順
          </p>
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root staffs css-apqrd9-MuiTableBody-root"
      data-rbd-droppable-context-id="2"
      data-rbd-droppable-id="staffs"
      role={null}
    >
      <tr
        className="MuiTableRow-root css-ddz5tx-MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
          colSpan={5}
        >
          担当者を追加してください
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Organisms/Staffs/Staff List/Staff List Fetch Error 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-145dpyk-MuiPaper-root-MuiAlert-root"
  role="alert"
>
  <div
    className="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
      data-testid="ErrorOutlineIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="MuiAlert-message css-acap47-MuiAlert-message"
  >
    <div>
      The API fetched data but it returned null.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Organisms/Staffs/Staff List/Staff List Loading 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-11xur9t-MuiPaper-root-MuiTableContainer-root"
>
  <table
    aria-label="staffs table"
    className="MuiTable-root css-rqglhn-MuiTable-root"
    role={null}
  >
    <thead
      className="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-oromn6-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            担当者名
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-oromn6-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            更新日時
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1y098np-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            編集
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1y098np-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            プルダウン表示
          </p>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1y098np-MuiTableCell-root"
          scope="col"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
          >
            プルダウン表示順
          </p>
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root staffs css-apqrd9-MuiTableBody-root"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="staffs"
      role={null}
    >
      <tr
        className="MuiTableRow-root css-ddz5tx-MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-8ibnsh-MuiTableCell-root"
          colSpan={5}
        >
          <span
            className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
            role="progressbar"
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                cx={44}
                cy={44}
                fill="none"
                r={20.2}
                strokeWidth={3.6}
                style={Object {}}
              />
            </svg>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
